# VirtualMachineInterpreter.rs

./: Cargo.toml  README.md
src/: domain.rs  insn.rs  lib.rs  machine.rs
tests/: insn_tests.rs  machine_tests.rs  tests.rs
