[package]
name = "virmin"
version = "0.3.0"
license = "Apache-2.0"
edition = "2021"
description = "A library for building and testing virtual machine specifications."
homepage = "https://github.com/DavePearce/VirtualMachineInterpreter.rs"
repository = "https://github.com/DavePearce/VirtualMachineInterpreter.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"